--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
